# mlops-research

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: first-ci.yaml  first-ci.yml
app/: main.py  schemas.py
docs/: mkdocs.yml
docs/docs/: index.md
frontend/src/: App.tsx
infra/: .gitignore
infra/examples/with-sage-maker/: locals.tf  main.tf  terraform.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/efs/: main.tf  outputs.tf  variables.tf
infra/modules/iam-assume-role/: main.tf  outputs.tf  variables.tf
infra/modules/sage-maker/: main.tf  outputs.tf  variables.tf
infra/modules/sg/: main.tf  outputs.tf  variables.tf
infra/modules/vpc/: main.tf  outputs.tf  variables.tf
machine-learning/: __init__.py  dataset.py  features.py  plots.py
machine-learning/modeling/: predict.py  train.py
machine_learning/: dataset.py  features.py  plots.py
machine_learning/modeling/: predict.py  train.py
notebooks/: crocodile.ipynb
